--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username      # change to your twitter homepage
-    - 'https://github.com/username'       # change to your github homepage
+    - 'https://github.com/bswsw'       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -101,11 +101,11 @@ comments:
   giscus:
     repo: 'bswsw/bswsw.github.io'            # <gh-username>/<repo>
     repo_id: 'R_kgDOHbD5Uw'
-    category: 'General'
-    category_id: 'DIC_kwDOHbD5U84CPetW'
-    mapping:          # optional, default to 'pathname'
-    input_position:   # optional, default to 'bottom'
-    lang:             # optional, default to the value of `site.lang`
+    category: 'Announcements'
+    category_id: 'DIC_kwDOHbD5U84CPetV'
+    mapping: 'pathname'         # optional, default to 'pathname'
+    input_position: 'bottom'   # optional, default to 'bottom'
+    lang: 'ko'             # optional, default to the value of `site.lang`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
